grails-app/assets/stylesheets/application/layout.less
/* ... */
.detached() {
  > .content {
    .make-md-column(12);
    padding: 0;
  }

  > [ui-view='details'] {
    //z-index: 100;
    bottom: 0;
    right: 30px;
    > .panel-light {
      border-left-width: 0px !important;
    }
    @media (max-width: @screen-sm-max) {
      width: 500px;
    }
    @media (min-width: @screen-md-min) {
      width: 560px;
    }
    @media (max-height: 1199px) {
      top: 145px;
    }
    @media (min-height: 1200px) {
      height: 900px;
    }
    position: absolute;
    border-top: 1px solid #ddd;
    border-right: 1px solid #ddd;
    border-left: 1px solid #ddd;
  }
  &.minimized {
    > [ui-view='details'] {
      top: auto;
      height: 55px;

      .item-name {
        display: inline-block;
        .text-overflow();
        max-width: 70px;
      }
      width: 660px;
      .right-title {
        max-width: none;
        > div:first-of-type {
          display: inline;
        }
        > div.btn-group {
          float: left;
          margin-right: 10px;
          &.dropdown {
            .dropdown-menu {
              //dropup
              top: auto;
              bottom: 100%;
              margin-bottom: 2px;
            }
          ;
          }
        }
      }
    }
  }
}

.focused() {
  > .content {
    .make-md-column(12);
    padding: 0;
  }

  .minimizable, .detachable {
    display: none;
  }

  > [ui-view='details'] {
    z-index: 100;
    bottom: 15px;
    left: 15px;
    right: 15px;
    overflow: hidden;
    top: 15px !important;
    width: inherit !important;
    > .panel-light {
      border-left-width: 0 !important;
    }
    position: absolute;
    border: 1px solid #ddd;
    .details-content-container {
      display: flex;
      flex-direction: row !important;
      .details-content {
        width: 33%;
        display: flex !important;
        flex: 1 1 auto !important;
        > div[ui-view] {
          border-right: 1px solid #e5e5e5;
        }
        > div[ui-view="details-tab-right"] {
          border-right: none;
        }
      }
    }
  }
}

.container-fluid.main > .view&.with-details, .modal-details > .modal-body {

  > [ui-view='details'] {
    > .panel {
      border-width: 0;
      border-left-width: 1px;
      > .panel-heading {
        padding: 0;
        > .panel-title {
          padding: 15px 15px 0;
        }
      }
    }
    > .panel div[ui-view^='details-tab'] {
      .chart {
        padding: 10px 10px 0;
        margin-bottom: 10px;
        border: 1px solid #e5e5e5;
      }
      form.form-editable:not(:hover):not(.form-editing), form:not(.form-editable) {
        .form-control {
          background: none;
          border-color: transparent;
          cursor: text;
          box-shadow: none;
          resize: none;
        }
        .markitup-preview {
          border-color: transparent;
        }
        .input-group-btn {
          visibility: hidden;
        }
        .input-group-addon {
          border-right: 1px solid #d9d9d9;
        }
        .select2-container {
          box-shadow: none;
          .select2-choice, .select2-choices {
            &, &:hover {
              background: none;
              border-color: transparent;
              cursor: text;
              box-shadow: none;
              .select2-arrow {
                display: none;
              }
              .select2-search-choice-close {
                display: none;
              }
            }
          }
        }
        .form-group div {
          border-color: transparent;
        }
      }
      form.form-editable:not(.form-editing) {
        .select2-container {
          .select2-search-choice {
            .select2-search-choice-close {
              display: none;
            }
          }
        }
      }
      form.form-editable:hover {
        .input-group-addon {
          border-right: 0;
        }
      }
      form:not(.form-editable) {
        .panel-footer {
          .responsive-invisibility();
        }
      }
      form {
        .markitup-preview, .atwho-preview, .form-control {
          &.important {
            &:not(:focus) {
              background-color: @view-bg !important;
            }
          }
        }
      }
      .panel-footer {
        padding: 0;
        > div:first-child {
          padding: 15px;
        }
        .btn + .btn {
          margin-left: 5px;
        }
      }
    }
  }
}

.container-fluid.main > .view&.with-details > [ui-view='details'] {
  form.form-editable {
    .panel-footer {
      .responsive-invisibility();
    }
    &.form-editing {
      .panel-footer {
        .responsive-visibility();
      }
    }
  }
}

.modal-details > .modal-body > [ui-view='details'] > .panel {
  .panel-footer {
    .btn-toolbar {
      .btn {
        float: right;
        margin-left: 5px;
      }
      text-align: right;
    }
  }
}

.form-not-expanded {
  .form-group {
    margin-bottom: 0;
  }
  .has-error .form-control, .has-error .input-group-addon {
    border: 1px solid #d9d9d9;
    color: #555555;
  }
  .btn-toolbar .btn, .spaced-help-block, .hidden-not-expanded, .input-group-addon strong {
    display: none;
  }
  textarea, .form-group-markItUp + .markitup-preview:not(.no-fixed-height) {
    min-height: 30px;
    height: 30px !important;
    overflow: hidden !important;
  }
}

.form-expanded {
  .visible-hidden {
    display: none;
  }
}

.panel-heading {
  .states-container {
    &:after {
      clear: both;
      content: "";
      display: block;
    }
    padding: 15px;
  }
}

.modal-dialog [ui-view="details"] {
  .panel-heading {
    padding: 0;
    .panel-title {
      padding: 15px 15px 0;
    }
  }
}
/* ... */

